# SmartPrice-Machine-Learning-Based-Price-Prediction-System

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: app.py  train_model.py
data/: dataset.csv
frontend/: index.html  script.js  style.css
notebooks/: training.ipynb
scripts/: generate_sample_data.py
src/smartprice/: __init__.py  data.py  predict.py  train.py
